# wordle-helper

./: .envrc  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  flake.nix  index.html  justfile  leptosfmt.toml  rust-toolchain.toml  rustfmt.toml  tailwind.config.js
.github/workflows/: gh-pages-deploy.yml
gh-pages-app/: Cargo.toml  Trunk.toml  index.html
gh-pages-app/css/: input.css
gh-pages-app/src/: main.rs
gh-pages-app/src/components/: footer.rs  hashrouter.rs  mod.rs  settings.rs
gh-pages-app/src/components/navbar/: cog_icon.rs  information_circle_icon.rs  mod.rs
gh-pages-app/src/pages/: error_page.rs  home.rs  mod.rs
shared/wordle-core/: Cargo.toml
shared/wordle-core/src/: jonathanolson.rs  lib.rs  types.rs
shared/wordle-core/src/wordlist/: mod.rs  pattern.rs
shared/wordlists/: Cargo.toml
shared/wordlists/src/: lib.rs
shared/wordlists/src/assets/5bukv/: ru_5words.txt
shared/wordlists/src/assets/wordle.global/: ru_5words.txt
src/: app.rs  main.rs
src/components/: footer.rs  hashrouter.rs  mod.rs
src/components/keyboard/: mod.rs
src/components/navbar/: chart_bar_icon.rs  mod.rs
src/core/wordlist/: mod.rs  pattern.rs
src/pages/: home.rs
