[package]
edition = "2021"
name    = "wordle-helper"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "1.0.0-beta.6", features = ["display"] }

# UI dependencies
console_error_panic_hook = "0.1.7"
console_log              = "1"
copy_dir                 = "0.1.3"
leptos                   = { version = "0.6.9", features = ["csr", "nightly"] }
leptos-use               = "0.10.4"
leptos_meta              = { version = "0.6.9", features = ["csr", "nightly"] }
leptos_router            = { version = "0.6.9", features = ["csr", "nightly"] }
leptos_theme             = "0.1.2"
log                      = "0.4.21"
styled                   = "0.2.0"
stylist                  = "0.13.0"

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr", "styled/csr"]
# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"

[dev-dependencies]
wasm-bindgen      = "*"
wasm-bindgen-test = "*"
web-sys           = { version = "*", features = ["Document", "Window"] }

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 'z'
panic         = "abort"
