[workspace]
members = [
    "gh-pages-app",
    #"playground/*",
    "shared/wordle-core",
    "shared/wordlists",
]
resolver = "2"

[workspace.package]
authors     = ["Anatoly Chumakov"]
description = "A wordle helper tools. Built with Leptos; Designed with Tailwind"
edition     = "2021"
license     = "MIT"
version     = "0.1.0"

[workspace.lints.rust]
# unsafe_code = "forbid"
# unused = "allow" # For experimental dev.

[workspace.lints.clippy]
#cargo       = "warn"
all         = "warn"
complexity  = "warn"
correctness = "deny"
nursery     = "warn"
pedantic    = "warn"
perf        = "deny"
style       = "warn"
suspicious  = "warn"

cast_possible_truncation = "warn"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 'z'
panic         = "abort"
strip         = true

[profile.dev]
codegen-units = 256
lto           = "off"
opt-level     = 0

[workspace.dependencies]
derive_more          = { version = "1.0.0-beta.6", features = ["display"] }
unicode-segmentation = "1.11.0"

wordle-core = { version = "*", path = "./shared/wordle-core" }
wordlists   = { version = "*", path = "./shared/wordlists" }

console_error_panic_hook = "0.1.7"

leptos        = { version = "0.6.9", features = ["csr", "nightly"] }
leptos-use    = { version = "*" }
leptos_lucide = "0.1.1"
leptos_router = { version = "0.6.9", features = ["csr", "nightly"] }
