[package]
name = "gh-pages-app"

authors.workspace     = true
description.workspace = true
edition.workspace     = true
license.workspace     = true
version.workspace     = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
derive_more = { workspace = true }
rand        = "*"

console_error_panic_hook = { workspace = true }

console_log  = "1"
copy_dir     = "0.1.3"
leptos_meta  = { version = "0.6.9", features = ["csr", "nightly"] }
leptos_theme = "0.1.2"
log          = "0.4.21"
styled       = "0.2.0"
stylist      = "0.13.0"

leptos-use    = { workspace = true }
leptos_lucide = { workspace = true }

[dependencies.leptos]
features  = ["csr", "nightly"]
workspace = true

[dependencies.leptos_router]
features  = ["csr", "nightly"]
workspace = true

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr", "styled/csr"]

[dev-dependencies]
wasm-bindgen      = "*"
wasm-bindgen-test = "*"
web-sys           = { version = "*", features = ["Document", "Window"] }
